--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "ros.distro": "galactic"
+    "ros.distro": "galactic",
+    "python.autoComplete.extraPaths": [
+        "/home/wenpeng/Documents/ros2_ws/install/cdm_tip_publisher/lib/python3.8/site-packages",
+        "/home/wenpeng/Documents/ros2_ws/install/cdm_tip_msgs/lib/python3.8/site-packages",
+        "/opt/ros/galactic/lib/python3.8/site-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/wenpeng/Documents/ros2_ws/install/cdm_tip_publisher/lib/python3.8/site-packages",
+        "/home/wenpeng/Documents/ros2_ws/install/cdm_tip_msgs/lib/python3.8/site-packages",
+        "/opt/ros/galactic/lib/python3.8/site-packages"
+    ]
 }
